# csv-profilerW1

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: sample.csv
outputs/: report.json  report.md
src/csv_profiler/: cli.py  io.py  profile.py  profiling.py  render.py
