[project]
name = "csv-profiler"
version = "0.1.0"
description = "CSV Profiler: analyze CSV files via CLI or Streamlit GUI."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Luluh Almogbil" }
]
dependencies = [
  "pandas>=2.0",
  "typer>=0.12",
  "rich>=13.0",
  "streamlit>=1.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

